[metadata]
name = pytest-terra-fixt-marshall7m
version = 0.4.0
author = Marshall Mamiya
description = Terraform fixtures for pytest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marshall7m/pytest-terra-fixt
project_urls =
    Bug Tracker = https://github.com/marshall7m/pytest-terra-fixt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest

[options]
install_requires =
    pytest

[options.entry_points]
pytest11 =
    terra_fixt = terra_fixt